# fmflow

./: .buildinfo  .gitignore  .travis.yml  CITATION.cff  Pipfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: fmflow.core.doctree  fmflow.doctree  fmflow.fits.doctree  fmflow.fits.functions.doctree  fmflow.logging.doctree  fmflow.models.doctree  fmflow.utils.doctree  modules.doctree
.github/workflows/: gh-pages.yaml  pypi.yaml  tests.yaml  tests.yml
_apidoc/: fmflow.core.html  fmflow.fits.functions.html  fmflow.fits.html  fmflow.html  fmflow.logging.html  fmflow.models.html  fmflow.utils.html  modules.html
_modules/: index.html
_modules/fmflow/: core.html  logging.html  models.html
_modules/fmflow/core/array/: decorators.html  functions.html
_modules/fmflow/core/cube/: functions.html
_modules/fmflow/core/spectrum/: functions.html
_modules/fmflow/fits/: functions.html
_modules/fmflow/fits/aste/: functions.html
_modules/fmflow/fits/nro45m/: functions.html
_modules/fmflow/models/astrosignal/: classes.html  functions.html
_modules/fmflow/models/atmosphere/: classes.html  functions.html
_modules/fmflow/models/commonmode/: classes.html  functions.html
_modules/fmflow/models/gain/: classes.html  functions.html
_modules/fmflow/utils/binary/: classes.html
_modules/fmflow/utils/convergence/: classes.html
_modules/fmflow/utils/datetime/: classes.html
_modules/fmflow/utils/fits/: functions.html
_modules/fmflow/utils/misc/: functions.html
_modules/fmflow/utils/ndarray/: functions.html
_sources/: index.md.txt  index.rst.txt
_sources/_apidoc/: fmflow.core.rst.txt  fmflow.fits.functions.rst.txt  fmflow.fits.rst.txt  fmflow.logging.rst.txt  fmflow.models.rst.txt  fmflow.rst.txt  fmflow.utils.rst.txt
docs/: .buildinfo  build  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/fmflow/: core.html  logging.html  models.html
docs/_modules/fmflow/core/array/: decorators.html  functions.html
docs/_modules/fmflow/core/cube/: functions.html
docs/_modules/fmflow/fits/: functions.html
docs/_project/: build.sh  conf.py  index.rst  testbuild.sh
docs/_project/apis/: fmflow.core.rst  fmflow.models.rst  fmflow.utils.rst
docs/_sources/apis/: fmflow.core.rst.txt  fmflow.fits.rst.txt  fmflow.logging.rst.txt  fmflow.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs/apis/: fmflow.core.html  fmflow.fits.html  fmflow.html  fmflow.logging.html  fmflow.models.html  fmflow.utils.html  modules.html
etc/: configure  publish
examples/: taniguchi_et_al_2018a.ipynb
fmflow/: __init__.py
fmflow/array/: __init__.py  classes.py  decorators.py  functions.py
fmflow/core/: __init__.py  classes.py  decorators.py  functions.py
fmflow/core/array/: classes.py  decorators.py  functions.py
fmflow/core/cube/: classes.py  functions.py
fmflow/core/spectrum/: __init__.py  classes.py  functions.py
fmflow/data/: aste_backendlog_mac.yaml  obsinfo.yaml
fmflow/fits/: __init__.py  functions.py
fmflow/fits/array/: functions.py
fmflow/fits/aste/: functions.py
fmflow/fits/aste/data/: antennalog.yaml  backendlog_mac.yaml  fmlolog.yaml
fmflow/fits/data/: aste_backendlog_common.yaml  nro45m_backendlog_common.yaml  obsinfo.yaml
fmflow/fits/nro45m/: functions.py
fmflow/fits/nro45m/data/: backendlog_sam45.yaml  fmlolog.yaml
fmflow/logging/: __init__.py  functions.py
fmflow/models/: __init__.py  classes.py
fmflow/models/astrosignal/: classes.py  functions.py
fmflow/models/atmosphere/: __init__.py  classes.py  functions.py
fmflow/models/commonmode/: classes.py  functions.py
fmflow/models/data/: am.yaml
fmflow/models/gain/: __init__.py  classes.py  functions.py
fmflow/utils/: __init__.py
fmflow/utils/binary/: classes.py
fmflow/utils/convergence/: classes.py
fmflow/utils/datetime/: classes.py
fmflow/utils/exceptions/: classes.py
fmflow/utils/fits/: functions.py
fmflow/utils/misc/: functions.py
fmflow/utils/multiprocessing/: classes.py
fmflow/utils/ndarray/: functions.py
fmflow/utils/progress/: functions.py
scripts/: dump.py  qlook-godec.py  qlook-pca.py
tests/: test_metadata.py
(+17 files in other folders)
