[tool.poetry]
name = "fmflow"
version = "0.4.0"
description = "Data analysis package for FMLO"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["astronomy", "radio-astronomy", "data-analysis", "fmlo"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fmlo-dev/fmflow/"
documentation = "https://fmlo-dev.github.io/fmflow/"

[tool.poetry.dependencies]
python = "^3.7"
astropy = [
    { version = ">=4.3, <5.0", python = ">=3.7, <3.8" },
    { version = "^5.0", python = ">=3.8, <3.11" },
]
matplotlib = "^3.2"
netcdf4 = "^1.6"
numba = "^0.56"
numpy = [
    { version = ">=1.21, <1.22", python = ">=3.7, <3.8" },
    { version = "^1.22", python = ">=3.8, <3.11" },
]
pyyaml = "^6.0"
scikit-learn = [
    { version = ">=1.0, <1.1", python = ">=3.7, <3.8" },
    { version = "^1.1", python = ">=3.8, <3.11" },
]
scipy = [
    { version = ">=1.7, <1.8", python = ">=3.7, <3.8" },
    { version = "^1.8", python = ">=3.8, <3.11" },
]
tqdm = "^4.64"
xarray = [
    { version = ">=0.20, <0.21", python = ">=3.7, <3.8" },
    { version = ">=0.21, <2023", python = ">=3.8, <3.11" },
]

[tool.poetry.group.dev.dependencies]
black = "^22.8"
ipython = [
    { version = ">=7.34, <8.0", python = ">=3.7, <3.8" },
    { version = "^8.0", python = ">=3.8, <3.11" },
]
myst-parser = "^0.18"
pydata-sphinx-theme = "^0.9"
pyright = "^1.1"
pytest = "^7.1"
sphinx = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
