[tool.poetry]
name = "fmflow"
version = "0.4.0"
description = "Data analysis package for FMLO"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["astronomy", "radio-astronomy", "data-analysis", "fmlo"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fmlo-dev/fmflow/"
documentation = "https://fmlo-dev.github.io/fmflow/"

[tool.poetry.dependencies]
python = "^3.11"
astropy = "^7.0"
matplotlib = "^3.10"
netcdf4 = "^1.7"
numba = "^0.61"
numpy = "^2.0"
pyyaml = "^6.0"
scikit-learn = "^1.6"
scipy = "^1.15"
tqdm = "^4.67"
xarray = "^2025"

[tool.poetry.group.dev.dependencies]
ipython = "^9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
