[tool.poetry]
name = "fmflow"
version = "0.5.0"
description = "Data analysis package for FMLO"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["astronomy", "radio-astronomy", "data-analysis", "fmlo"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fmlo-dev/fmflow/"
documentation = "https://fmlo-dev.github.io/fmflow/"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
astropy = ">=6, <8"
matplotlib = "^3"
netcdf4 = "^1"
numba = "^0.60"
numpy = "^2"
pyyaml = "^6"
scikit-learn = "^1"
scipy = "^1"
tqdm = "^4"
xarray = ">=2024, <2026"

[tool.poetry.group.dev.dependencies]
black = "^25"
ipython = "^8"
myst-parser = "^3"
pydata-sphinx-theme = "^0.15"
pyright = "^1"
pytest = "^8"
sphinx = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
