[metadata]
name = fmflow
version = 0.2.7
author = Akio Taniguchi
author_email = taniguchi@a.phys.nagoya-u.ac.jp
url = https://github.com/fmlo-dev/fmflow
description = Data analysis package for FMLO
long_description = file:README.md
long_description_content_type = text/markdown
keywords = astronomy, radio-astronomy, data-analysis, fmlo
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
include_package_data = True
packages =
    fmflow
    fmflow.core
    fmflow.core.array
    fmflow.core.cube
    fmflow.core.spectrum
    fmflow.fits
    fmflow.fits.nro45m
    fmflow.fits.aste
    fmflow.logging
    fmflow.models
    fmflow.models.astrosignal
    fmflow.models.atmosphere
    fmflow.models.commonmode
    fmflow.models.gain
    fmflow.utils
    fmflow.utils.binary
    fmflow.utils.convergence
    fmflow.utils.datetime
    fmflow.utils.fits
    fmflow.utils.misc
    fmflow.utils.ndarray
install_requires =
    numpy
    scipy
    numba
    xarray
    astropy
    matplotlib
    scikit-learn
    netCDF4
    pyyaml
    tqdm

[options.package_data]
fmflow = data/*.yaml
